unpackaged/main/default/objects/User/fields/Active_CS_Member__c.field-meta.xml
<CustomField>
    <fullName>Active_CS_Member__c</fullName>
    <description>Field for tracking active CS members regardless of whether or not they are still active in Salesforce</description>
    <label>Active CS Member</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>