unpackaged/main/default/objects/User/fields/Bookings_Split__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Split__c</fullName>
    <label>Bookings Split</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>