unpackaged/main/default/objects/User/fields/CS_Region__c.field-meta.xml
<CustomField>
    <fullName>CS_Region__c</fullName>
    <description>User&#39;s region in CS Department (if applicable). Used for reports and tracking.</description>
    <label>CS Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APAC - Chennai</fullName>
            </value>
            <value>
                <fullName>APAC - Korea</fullName>
            </value>
            <value>
                <fullName>APAC - Sydney</fullName>
            </value>
            <value>
                <fullName>EMEA - London</fullName>
            </value>
            <value>
                <fullName>JAPAN - Japan</fullName>
            </value>
            <value>
                <fullName>NA - GDL</fullName>
            </value>
            <value>
                <fullName>NA - Scottsdale</fullName>
            </value>
            <value>
                <fullName>NA - US</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>