unpackaged/main/default/objects/User/fields/CS_Role__c.field-meta.xml
<CustomField>
    <fullName>CS_Role__c</fullName>
    <description>User&#39;s role in CS Department (if applicable). Used for reports and tracking.</description>
    <label>CS Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2 Production</fullName>
            </value>
            <value>
                <fullName>Tier 2 Development</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>NOC</fullName>
            </value>
            <value>
                <fullName>Manager NOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>