unpackaged/main/default/objects/User/fields/Date_Made_CSR__c.field-meta.xml
<CustomField>
    <fullName>Date_Made_CSR__c</fullName>
    <label>Date Made CSR</label>
    <type>Date</type>
</CustomField>