unpackaged/main/default/objects/User/fields/Date_Made_Tier_2_Production__c.field-meta.xml
<CustomField>
    <fullName>Date_Made_Tier_2_Production__c</fullName>
    <label>Date Made Tier 2 Production</label>
    <type>Date</type>
</CustomField>