unpackaged/main/default/objects/User/fields/Director_Approver__c.field-meta.xml
<CustomField>
    <fullName>Director_Approver__c</fullName>
    <label>Director Approver</label>
    <relationshipName>DirectorApprover</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>