unpackaged/main/default/objects/User/fields/Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Division_Name__c</fullName>
    <label>Division Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>