unpackaged/main/default/objects/User/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>HYPERLINK(&quot;https://na20.salesforce.com/&quot;&amp; Id &amp;&quot;?noredirect=1&amp;isUserEntityOverride=1&quot;, FirstName &amp; &quot; &quot; &amp; LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>