unpackaged/main/default/objects/User/fields/Function_Name__c.field-meta.xml
<CustomField>
    <fullName>Function_Name__c</fullName>
    <label>Function Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>