unpackaged/main/default/objects/User/fields/HR_Country__c.field-meta.xml
<CustomField>
    <fullName>HR_Country__c</fullName>
    <label>HR - Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>