unpackaged/main/default/objects/User/fields/HR_Email__c.field-meta.xml
<CustomField>
    <fullName>HR_Email__c</fullName>
    <label>HR - Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>