unpackaged/main/default/objects/User/fields/HR_First_Name__c.field-meta.xml
<CustomField>
    <fullName>HR_First_Name__c</fullName>
    <label>HR - First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>