unpackaged/main/default/objects/User/fields/HR_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>HR_Manager_Email__c</fullName>
    <description>Up-to-date values from the HR platform, via the Identity management platform.</description>
    <inlineHelpText>Up-to-date values from the HR platform, via the Identity management platform.</inlineHelpText>
    <label>HR - Manager Email</label>
    <type>Email</type>
</CustomField>