unpackaged/main/default/objects/User/fields/HR_People_Manager__c.field-meta.xml
<CustomField>
    <fullName>HR_People_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Up-to-date values from the HR platform, via the Identity management platform.</description>
    <inlineHelpText>Up-to-date values from the HR platform, via the Identity management platform.</inlineHelpText>
    <label>HR - People Manager</label>
    <type>Checkbox</type>
</CustomField>