unpackaged/main/default/objects/User/fields/HR_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HR_Start_Date__c</fullName>
    <description>Up-to-date values from the HR platform, via the Identity management platform.</description>
    <inlineHelpText>Up-to-date values from the HR platform, via the Identity management platform.</inlineHelpText>
    <label>HR - Start Date</label>
    <type>Date</type>
</CustomField>