unpackaged/main/default/objects/User/fields/Personal_Name__c.field-meta.xml
<CustomField>
    <fullName>Personal_Name__c</fullName>
    <description>Secondary full name that can be referenced in the CPQ quote template.</description>
    <inlineHelpText>Secondary full name that can be referenced in the CPQ quote template.</inlineHelpText>
    <label>Personal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>