unpackaged/main/default/objects/User/fields/Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Sub_Division__c</fullName>
    <label>Sub Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
                <isActive>false</isActive>
                <label>APAC</label>
            </value>
            <value>
                <fullName>Americas</fullName>
                <isActive>false</isActive>
                <label>Americas</label>
            </value>
            <value>
                <fullName>Commercial</fullName>
                <isActive>false</isActive>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>Expand</fullName>
                <isActive>false</isActive>
                <label>Expand</label>
            </value>
            <value>
                <fullName>LATAM</fullName>
                <isActive>false</isActive>
                <label>LATAM</label>
            </value>
            <value>
                <fullName>Land</fullName>
                <isActive>false</isActive>
                <label>Land</label>
            </value>
            <value>
                <fullName>Mid Market</fullName>
                <isActive>false</isActive>
                <label>Mid Market</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>