unpackaged/main/default/objects/User/fields/SVP_Approver__c.field-meta.xml
<CustomField>
    <fullName>SVP_Approver__c</fullName>
    <label>SVP Approver</label>
    <relationshipName>SVPApprover</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>