unpackaged/main/default/objects/User/fields/VP_Approver__c.field-meta.xml
<CustomField>
    <fullName>VP_Approver__c</fullName>
    <label>VP Approver</label>
    <relationshipName>VPApprover</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>