unpackaged/main/default/objects/User/fields/X18_Digits_User_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digits_User_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18-Digits User ID</label>
    <type>Text</type>
</CustomField>