unpackaged/main/default/objects/User/listViews/Active_Sales_Engineers.listView-meta.xml
<ListView>
    <fullName>Active_Sales_Engineers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>Sales Engineer</value>
    </filters>
    <label>Active - Sales Engineers</label>
    <sharedTo>
        <role>Salesforce_Team</role>
    </sharedTo>
</ListView>