unpackaged/main/default/objects/User/listViews/Internal_Saless.listView-meta.xml
<ListView>
    <fullName>Internal_Saless</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Sales</value>
    </filters>
    <label>Internal - Sales</label>
    <language>en_US</language>
    <sharedTo>
        <role>Salesforce_Team</role>
    </sharedTo>
</ListView>