unpackaged/main/default/objects/User/listViews/InternalUsersActiveKantata.listView-meta.xml
<ListView>
    <fullName>InternalUsersActiveKantata</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>@brightcove.com</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>Portal</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>camacho,zenovei,zachery,bertowice,costello</value>
    </filters>
    <label>Internal - Kantata</label>
    <language>en_US</language>
</ListView>