unpackaged/main/default/objects/User/listViews/InternalUsersFrozen.listView-meta.xml
<ListView>
    <fullName>InternalUsersFrozen</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CS_Region__c</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>Sub_Division__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_FROZEN</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>brightcove</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>Portal</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Internal - Active Frozen</label>
    <language>en_US</language>
</ListView>